# library_v2

./: .gitignore  Cargo.toml  Dockerfile  README.md  books_taylor.csv  docker-compose.yml
data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-1128337189004092969.wt  collection-2-1128337189004092969.wt  collection-4-1128337189004092969.wt  collection-7-1128337189004092969.wt  index-1-1128337189004092969.wt  index-3-1128337189004092969.wt  index-5-1128337189004092969.wt  index-6-1128337189004092969.wt  index-8-1128337189004092969.wt  index-9-1128337189004092969.wt  sizeStorer.wt
data/.mongodb/mongosh/: 66e25fad180cb914f45e739b_log  66e25fad9c99ea2c705e739b_log  66e25fae7715a15aa25e739b_log  66e2612fcb1b5ba7f85e739b_log  66e26138386c8aa6e85e739b_log  config  mongosh_repl_history
data/diagnostic.data/: metrics.2024-09-12T03-27-41Z-00000  metrics.2024-09-12T03-32-47Z-00000  metrics.2024-09-12T03-43-16Z-00000  metrics.2024-09-12T04-15-15Z-00000  metrics.2024-09-12T04-23-58Z-00000  metrics.interim
src/: commands.rs  lib.rs  main.rs  models.rs  repositories.rs  scanner.rs  utils.rs
src/rocket_routes/: books.rs  mod.rs
